// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should render correctly with summary 1`] = `
<div>
  <div
    class="mb-2.5 flex flex-col place-content-end gap-2.5 md:mb-5 md:flex-row md:border-b md:pb-5"
  >
    <p
      class="grow"
    >
      <span
        class="font-bold"
      >
        Gäller intygsperiod
        :
      </span>
       
      2023-05-09 - 2023-06-23
    </p>
    <div
      class="flex flex-col md:flex-row md:gap-1.5"
    >
      <span
        class="font-bold"
      >
        Intyg utfärdat:
      </span>
      <span>
        2023-05-09
      </span>
    </div>
  </div>
</div>
`;

exports[`Should render correctly without summary 1`] = `
<div>
  <div
    class="mb-2.5 flex flex-col place-content-end gap-2.5 md:mb-5 md:flex-row md:border-b md:pb-5"
  >
    <div
      class="flex flex-col md:flex-row md:gap-1.5"
    >
      <span
        class="font-bold"
      >
        Intyg utfärdat:
      </span>
      <span>
        2023-05-09
      </span>
    </div>
  </div>
</div>
`;
